--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     ],
     "java.project.referencedLibraries": [
         "CRUD_PSC\\resources\\mysql-connector-j-8.4.0.jar"
-    ]
+    ],
+    "files.associations": {
+        "stdio.h": "c"
+    }
 }
