--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,8 @@
 {
     "java.project.sourcePaths": [
-        "CRUD_PSC\\src",
-        "Loja\\src"
+        "ProjetoRuim\\src"
     ],
     "java.project.referencedLibraries": [
-        "CRUD_PSC\\resources\\mysql-connector-j-8.4.0.jar"
-    ],
-    "files.associations": {
-        "stdio.h": "c"
-    }
+        "ProjetoRuim\\resources\\mysql-connector-j-8.4.0.jar"
+    ]
 }
